[gd_scene load_steps=2 format=3 uid="uid://ce8h5j2qwxn8c"]

[ext_resource type="Script" path="res://scenes/ui/game_end_screen.gd" id="1_game_end_screen"]

[node name="GameEndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_game_end_screen")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Panel"]
layout_mode = 2

[node name="Kills" type="Label" parent="CenterContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Enemy Kills: 0"

[node name="WaveBonuses" type="Label" parent="CenterContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Wave Bonuses: 0"

[node name="HealthBonuses" type="Label" parent="CenterContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Health Bonuses: 0"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="TotalScore" type="Label" parent="CenterContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "TOTAL SCORE: 0"
horizontal_alignment = 1
